--- a/app/src/main/res/layout/activity_yoga.xml
+++ b/app/src/main/res/layout/activity_yoga.xml
@@ -53,7 +53,7 @@
     <!--Now add the NestedScrollView-->
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <!--In textview we will be adding the text that i have
@@ -117,5 +117,27 @@
 
 
     </androidx.core.widget.NestedScrollView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/yogaNavBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:cardCornerRadius="20dp"
+        android:elevation="10dp"
+        android:layout_margin="16dp"
+        >
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNav"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            app:menu="@menu/menu_bottom_nav"
+            app:itemRippleColor="@android:color/transparent"
+            />
+
+    </androidx.cardview.widget.CardView>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
